# CiRCLE_sat_bot

./: .gitignore  Cargo.toml  README.md  config.json  config.json-template  satellites.toml
http_client/: main.py  pressure_test.py  send_query.py
locales/: doc.json  en.json  zh.json
src/: amsat_analyser.rs  app_status.rs  config.json-template  config.rs  i18n.rs  logger.rs  main.rs  response.rs  satellites.rs  socket.rs
src-old/: app_status.rs  logger.rs  main.rs  socket.rs
src/fs/: handler.rs
src/module/: mod.rs  prelude.rs  scheduled.rs
src/module/amsat/: amsat_scraper.rs  mod.rs  official_report.rs  prelude.rs  user_report.rs
src/module/earthquake/: earthquake_map_generator.py  ws.rs
src/module/handler/: router.rs
src/module/pass_query/: all_pass_notify.rs  mod.rs  sat_cache_clean.rs  sat_hotload.rs  sat_list.rs  sat_pass_notify.rs  sat_pass_predict.rs  satellites.rs
src/module/solar_image/: get_image.rs
src/module/tools/: mod.rs  render.rs  roaming.rs
src/msg/: group_msg.rs  mod.rs  prelude.rs
src/msg_sys/: group_chat.rs  mod.rs  prelude.rs
src/pass_query/: all_pass_notify.rs  mod.rs  sat_cache_clean.rs  sat_hotload.rs  sat_list.rs  sat_pass_notify.rs  sat_pass_predict.rs  satellites.rs
src/query/: console.rs  mod.rs  sat_query.rs
src/sat_pass_predict/: mod.rs  sat_pass_predict.rs
src/sat_status/: amsat_parser.rs  mod.rs
src/solar_image/: get_image.rs
src/subscriber/: mod.rs  push_service.rs  satellite_data_cache.rs  subscription_manager.rs
src/task_manager/: mod.rs  query_handler.rs  scheduled_tasks.rs
