[package]
name = "CiRCLE_sat_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde", "clock"] }
chrono-tz = "0.8"
eventsource-client = "0.15.0"
full = "0.3.0"
futures = "0.3.31"
lazy_static = "1.4"
notify = "8.0.0"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "blocking", "rustls-tls"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
url = "2.5.4"
