[package]
name = "CiRCLE_sat_bot_server"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-server = "0.7.2"
channels = { version = "0.13.0", features = ["full"] }
chrono = "0.4.41"
fontdb = "0.23.0"
futures = "0.3.31"
indexmap = "2.10.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
resvg = "0.45.1"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strsim = "0.11.1"
tiny-skia = "0.11.4"
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.4"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
url = "2.5.4"
usvg = "0.45.1"
